[tool.poetry]
name = "warp"
version = "0.1.0"
description = ""
authors = ["apastukhanov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^1.5.2"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
